src/objects/IsChangedConfiguration__c.object
<CustomObject>
    <fields>
        <fullName>FieldName__c</fullName>
        <label>FieldName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewHash__c</fullName>
        <label>NewHash</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewId__c</fullName>
        <label>NewId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewValue__c</fullName>
        <label>NewValue</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OldHash__c</fullName>
        <label>OldHash</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OldId__c</fullName>
        <label>OldId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OldValue__c</fullName>
        <label>OldValue</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>IsChangedConfiguration</label>
    <nameField>
        <displayFormat>IC-{00000}</displayFormat>
        <label>IsChanged Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IsChanged Configuration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>